# ya-contest-8458-preparing-interview

./: README.md
problem-a/: CMakeLists.txt  README.md  main.cpp
problem-b/: CMakeLists.txt  README.md  main.cpp
problem-c/: CMakeLists.txt  README.md  main.cpp
problem-d/: CMakeLists.txt  README.md  main.cpp
problem-e/: CMakeLists.txt  README.md  main.cpp
problem-g/: CMakeLists.txt  README.md  main.cpp
